<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="planner"
    android:orientation="vertical"
    android:background="#ffffff">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/title_view_resa"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_red_light"
        android:textColor="#ffffffff"
        android:padding="10dp"
        android:text="@string/rpHeader"
        android:textSize="30sp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton2"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/shuffleikon"
        android:layout_marginTop="-53dip"
        android:layout_marginRight="-155dip"
        android:background="@drawable/shuffleikon"
        android:contentDescription="@string/iconShuffle" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dip"
        android:layout_marginBottom="-20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/plannerTextFrom"
            android:id="@+id/textView2"
            android:paddingLeft="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/plannerTextTo"
            android:id="@+id/textView6"
            android:paddingRight="22dp"
            android:paddingBottom="10dp"

            android:textColor="@android:color/black"
            android:layout_below="@+id/textView2"
            android:layout_toStartOf="@+id/editText2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/textView2"
            android:layout_marginRight="15dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:layout_alignBottom="@+id/textView6"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/textView2"
            android:layout_marginRight="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/plannerTextTime"
            android:id="@+id/textView7"
            android:layout_below="@+id/textView6"
            android:layout_alignParentStart="true"
            android:paddingTop="30dp"
            android:paddingLeft="20dp"
            android:textColor="@android:color/black"
            android:paddingBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/plannerTextRightNow"
            android:id="@+id/textView8"
            android:textColor="@android:color/black"
            android:layout_alignBottom="@+id/textView7"
            android:layout_centerHorizontal="true"
            android:paddingBottom="20dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plannerEditButton1"
            android:id="@+id/button"
            android:layout_alignBottom="@+id/textView8"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="7dip"
            android:layout_marginRight="15dip"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonArrival"
            android:id="@+id/radioButton"
            android:layout_below="@+id/button"
            android:layout_alignEnd="@+id/textView7" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonDeparture"
            android:id="@+id/radioButton2"
            android:layout_below="@+id/textView8"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/plannerTextTrafficType"
            android:id="@+id/textView9"
            android:layout_below="@+id/radioButton"
            android:layout_alignParentStart="true"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plannerEditButton2"
            android:id="@+id/button2"
            android:layout_alignBottom="@+id/textView9"
            android:layout_alignEnd="@+id/button"
            android:layout_marginTop="7dip"/>



        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/plannerTextFavourites"
            android:id="@+id/textView10"
            android:clickable="true"
            android:textColor="#000000"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:background="#FFFFFF"
            android:textSize="@dimen/Favoriter"
            android:layout_above="@+id/textView13"
            android:layout_alignParentStart="true"
            android:outlineProvider="paddedBounds"
            android:layout_marginBottom="-5dp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/plannerTextWatchlist"
            android:id="@+id/textView13"
            android:linksClickable="true"
            android:background="#FFFFFF"
            android:padding="20dp"
            android:textSize="@dimen/Favoriter"
            android:textColor="#000000"
            android:layout_marginBottom="72dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plannerSearchButton"
            android:id="@+id/button3"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"/>

    </RelativeLayout>


</LinearLayout>